# manta-ray

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
.github/workflows/: doxygen.yml
docs/: AcousticPairwiseRangeSystem_8h.html  AcousticPairwiseRangeSystem_8h.js  AcousticPairwiseRangeSystem_8h__dep__incl.map  AcousticPairwiseRangeSystem_8h__dep__incl.md5  AcousticPairwiseRangeSystem_8h__incl.map  AcousticPairwiseRangeSystem_8h__incl.md5  AcousticPairwiseRangeSystem_8h_source.html  AcousticsBuilder_8h.html  AcousticsBuilder_8h.js  AcousticsBuilder_8h__dep__incl.map  AcousticsBuilder_8h__dep__incl.md5  AcousticsBuilder_8h__incl.map  AcousticsBuilder_8h__incl.md5  AcousticsBuilder_8h_source.html  Arrival_8h.html  Arrival_8h.js  Arrival_8h__dep__incl.map  Arrival_8h__dep__incl.md5  Arrival_8h__incl.map  Arrival_8h__incl.md5  Arrival_8h_source.html  BellhopContext_8h.html  BellhopContext_8h.js  BellhopContext_8h__dep__incl.map  BellhopContext_8h__dep__incl.md5  BellhopContext_8h__incl.map  BellhopContext_8h__incl.md5  BellhopContext_8h_source.html  ConfigReader_8h.html  ConfigReader_8h.js  ConfigReader_8h__incl.map  ConfigReader_8h__incl.md5  ConfigReader_8h_source.html  CurrentDriftRobot_8h.html  CurrentDriftRobot_8h.js  CurrentDriftRobot_8h__dep__incl.map  CurrentDriftRobot_8h__dep__incl.md5  CurrentDriftRobot_8h__incl.map  CurrentDriftRobot_8h__incl.md5  CurrentDriftRobot_8h_source.html  (+445 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+39 more)
mantaray/: .clang-tidy  CMakeLists.txt  Doxyfile  README.md  create_docs.sh
mantaray/data/: README.md
mantaray/sim_config/: LBL_sim.json  README.md  beaufort_floats_sim.json  beaufort_summer.json  lbl_sim.json  lbl_simple_arctic_diver_sim.json  lbl_simple_arctic_sim.json  lbl_simple_sim.json  monterey.json  random_sim.json  run_batch.sh
mantaray/src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  CurrentDriftRobot.cpp  CurrentDriftRobot.h  Logger.cpp  Logger.h  checkAssert.h  default_province.cpp  main.cpp  province.cpp
mantaray/src/acoustics/: AcousticsBuilder.cpp  AcousticsBuilder.h  Agents.cpp  Agents.h  Arrival.cpp  Arrival.h  BeamBuilder.cpp  BeamBuilder.h  BellhopContext.cpp  BellhopValidator.cpp  BellhopValidator.h  BhHandler.cpp  BhHandler.h  BoundaryBuilder.cpp  BoundaryBuilder.h  CMakeLists.txt  Grid.cpp  Grid.h  Result.h  SimulationBuilder.cpp  SimulationBuilder.h  SimulationConfig.h  SourceReceiverBuilder.cpp  SourceReceiverBuilder.h  SspBuilder.cpp  SspBuilder.h  ValidationResult.h  acoustics.md  acousticsConstants.h  helpers.cpp  helpers.h  simControls.h
mantaray/src/acoustics/include/acoustics/: AcousticsBuilder.h  Arrival.h  BellhopContext.h  BhHandler.h  Grid.h  SimulationConfig.h  acousticsConstants.h  helpers.h  pch.h
mantaray/src/config/: ConfigReader.cpp  EnvironmentConfig.cpp
mantaray/src/include/mantaray/config/: ConfigReader.h  EnvironmentConfig.h  SimConfig.h
mantaray/src/include/mantaray/sim/: AcousticPairwiseRangeSystem.h  CurrentDriftRobot.h  RobotFactory.h
mantaray/src/include/mantaray/utils/: Logger.h  PfgWriter.h  checkAssert.h
mantaray/src/rb/: Body.cpp  CMakeLists.txt  ConstantVelRobot.cpp  Integrator.cpp  PhysicsBodies.cpp  RbInterfaces.cpp  RbWorld.cpp  RobotI.cpp  RobotsAndSensors.cpp  helpers.cpp  rb.md
mantaray/src/rb/include/rb/: Body.h  ConstantVelRobot.h  Integrator.h  PhysicsBodies.h  RbInterfaces.h  RbWorld.h  RobotI.h  RobotsAndSensors.h  helpers.h  pch.h
mantaray/src/sim/: AcousticPairwiseRangeSystem.cpp  CurrentDriftRobot.cpp  main.cpp  sim.md
mantaray/src/tools/: bhc_runner.cpp
mantaray/src/utils/: Logger.cpp  PfgWriter.cpp
mantaray/tests/: CMakeLists.txt  test_Integrator.cpp  test_PfgWriter.cpp  test_PhysicsBodies.cpp  test_grids.cpp  test_helpers.cpp  test_perf.cpp
pymantaray/: PyFactorScrap.py  data_provider_sandbox.py  main.html  main.py  oceanbench_data.py  plot_3d.py  pyproject.toml
pymantaray/acoustics/: debug_raytrace.py  grid_exporters.py  main.py  oceanbench_data.py  oceanbench_process.py  pyproject.toml  readers_1_8.py
pymantaray/debugging_help/: arrivalInfo.py  gt_odom_plot.py
pymantaray/localization/: debug_factor_graph_ranges.py  debug_factor_graphs.py  debug_gps.py  pyfg_to_gtsam.py  pyproject.toml  run_solver.py  visualize_solver.py  vtk_plots.py
